--- a/projects/client/src/index.css
+++ b/projects/client/src/index.css
@@ -57,3 +57,34 @@
     @apply bg-background text-foreground;
   }
 }
+
+.category-products {
+  display: grid;
+  grid-template-columns: minmax(0, 280px) 1fr;
+  grid-template-areas:
+    "product_banner product_banner"
+    "product_filter product_filter"
+    "product_side product_items";
+  column-gap: 1rem;
+  row-gap: 0.5rem;
+}
+
+.product_banner {
+  grid-area: product_banner;
+  margin: 0;
+}
+
+.product_filter {
+  grid-area: product_filter;
+  margin: 0;
+}
+
+.product_side {
+  grid-area: product_side;
+  margin: 0;
+}
+
+.product_items {
+  grid-area: product_items;
+  margin: 0;
+}
