--- a/projects/client/src/index.css
+++ b/projects/client/src/index.css
@@ -59,14 +59,22 @@
 }
 
 .category-products {
-  display: grid;
-  grid-template-columns: minmax(0, 280px) 1fr;
-  grid-template-areas:
-    "product_banner product_banner"
-    "product_filter product_filter"
-    "product_side product_items";
-  column-gap: 1rem;
-  row-gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2;
+}
+
+@media screen and (min-width: 768px) {
+  .category-products {
+    display: grid;
+    grid-template-columns: minmax(0, 280px) 1fr;
+    grid-template-areas:
+      "product_banner product_banner"
+      "product_filter product_filter"
+      "product_side product_items";
+    column-gap: 1rem;
+    row-gap: 0.5rem;
+  }
 }
 
 .product_banner {
